# fin-py

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.bat  build.sh  flake.nix
examples/: classes.fp  functions.fp  operators.fp
grammar/: definitions.md  operators.md
include/: errors.h  position.h  vector_functions.h
src/: generation.cpp  main.cpp  tokenizer.cpp  tokens.h
